--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "gsap": "^3.12.2",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
