--- a/client/package.json
+++ b/client/package.json
@@ -10,16 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.2",
     "@react-three/drei": "^9.88.16",
     "@react-three/fiber": "^8.15.11",
+    "@types/google-map-react": "^2.1.10",
     "gsap": "^3.12.2",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
-    "three": "^0.158.0"
+    "three": "^0.158.0",
+    "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.54.9",
+    "@types/node": "^20.9.4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/three": "^0.158.2",
