--- a/backend/project/package.json
+++ b/backend/project/package.json
@@ -6,6 +6,7 @@
         "start": "node ./bin/www"
     },
     "dependencies": {
+        "axios": "^1.6.2",
         "bcryptjs": "^2.4.3",
         "cookie-parser": "~1.4.4",
         "debug": "~2.6.9",
@@ -14,7 +15,7 @@
         "express-winston": "^4.2.0",
         "jsonwebtoken": "^9.0.2",
         "morgan": "~1.9.1",
-        "nodemon": "^3.0.1",
+        "nodemon": "^3.0.2",
         "pg": "^8.11.3",
         "redis": "^4.6.11",
         "winston": "^3.11.0"
