--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-table/core": "^6.3.0",
+    "@material-ui/core": "^4.12.4",
     "@react-google-maps/api": "^2.19.2",
     "@react-three/drei": "^9.88.16",
     "@react-three/fiber": "^8.15.11",
