--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "react-table": "^7.8.0",
+    "react-toastify": "^9.1.3",
     "three": "^0.158.0",
     "use-places-autocomplete": "^4.0.1"
   },
