--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@material-table/core": "^6.3.0",
-    "@material-ui/core": "^4.12.4",
     "@react-google-maps/api": "^2.19.2",
     "@react-three/drei": "^9.88.16",
     "@react-three/fiber": "^8.15.11",
@@ -20,7 +18,9 @@
     "@types/axios": "^0.14.0",
     "@types/google-map-react": "^2.1.10",
     "gsap": "^3.12.2",
+    "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.0",
+    "mantine-react-table": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@types/google.maps": "^3.54.10",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.9.4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
