--- a/backend/project/package.json
+++ b/backend/project/package.json
@@ -3,7 +3,8 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "start": "node ./bin/www"
+        "start": "node ./bin/www",
+        "build": "webpack"
     },
     "dependencies": {
         "axios": "^1.6.2",
@@ -20,5 +21,9 @@
         "pg": "^8.11.3",
         "redis": "^4.6.11",
         "winston": "^3.11.0"
+    },
+    "devDependencies": {
+        "webpack": "^5.90.3",
+        "webpack-cli": "^5.1.4"
     }
 }
